# boom-mpc

./: .dockerignore  .gitignore  Dockerfile  Dockerfile2  clear-gh-cache.sh  extract-image.sh  k8s-external-service.yaml  package-lock.json  package.json  serverless.yml  testMpc.js  tsconfig.json
.github/workflows/: clear-cache.yml  main.yml
db/: IDENTITY  LOG  OPTIONS-000007
demo/: bindings.js  ecdsa-party2.js  party1.js  test.js
native/: Cargo.toml
native/src/: lib.rs
native/src/party1/: ecdsa.rs  mod.rs
native/src/party2/: ecdsa.rs
src/: bindings.ts  common.ts  party2-express.ts  start-party1.ts  start-party2-local.ts  start-party2.ts  startParty1.ts  startParty2.ts
src/party1/: base.ts  ecdsa.ts
src/party2/: ecdsa.ts  index.ts
src/vault/: index.d.ts  index.js
src/vault/lib/: decrypter.js  defaults.js  dynamoDb.ts  encrypter.js  kms.ts  utils.js
