[package]
name = "mpc"
version = "0.1.0"
license = "ISC"
edition = "2018"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.75"
serde_json = "1.0.26"
serde_derive = "1.0.75"
kms = { git = "https://github.com/KZen-networks/kms-secp256k1.git", branch = "2.0" }
gotham-client = { git = "https://github.com/KZen-networks/gotham-city", branch = "server_fix" }
gotham-server = { git = "https://github.com/boomll/gotham-city", branch = "server_fix" }
once_cell = "1"
tokio = { version = "1", features = ["rt-multi-thread"] }
lambda-web = { version = "0.2.0", features=["rocket05"] }

[dependencies.neon]
version = "0.10.1"
default-features = false
features = ["napi-6", "promise-api", "channel-api"]
